--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -372,10 +372,13 @@ h6,
 .blogs {
   font-size: larger;
   padding: 12px;
+  padding-left: 0px ;
+  padding-right: 0px;
 }
 
 .title {
   font-weight: bold;
+  margin-bottom: 0px;
 }
 @keyframes animate-loading {
   0% {
